--- a/foods-website/style.css
+++ b/foods-website/style.css
@@ -164,6 +164,7 @@ html {
   height: 0;
   background-color: #fff;
   transition: height 0.5s;
+  z-index: 2;
 }
 
 .gallery-link:hover::before {
@@ -192,6 +193,15 @@ html {
   opacity: 0.6;
   box-shadow: 0.3rem 0.3rem 0.1rem #e92929, 0.5rem 0.5rem 0.1rem #a2e946,
     0.7rem 0.7rem 0.1rem #297ce9, 0.9rem 0.9rem 0.1rem #e92999;
+  transition: all 0.5s;
+}
+
+.gallery-link:hover .food-img {
+  box-shadow: 1rem 1rem 0.1rem #e92929, 2rem 2rem 0.1rem #a2e946,
+    3rem 3rem 0.1rem #297ce9, 4rem 4rem 0.1rem #e92999;
+  filter: blur(0.3rem);
+  opacity: 0.5;
+  transform: scale(1.1);
 }
 
 .food-name {
